--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-radio-group": "^2.2.0",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-persist": "^1.5.6",
+    "redux-thunk": "^1.0.3",
+    "reselect": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
+    "babel-plugin-transform-object-rest-spread": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.1.1",
+    "redux-devtools-dock-monitor": "^1.1.0",
+    "redux-devtools-log-monitor": "^1.0.4",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
