Fix publish script

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dev": "webpack-dev-server --progress --profile --colors --hot",
     "prepublish": "git checkout master && git pull origin master && git checkout gh-pages && git rebase master",
     "publish": "npm run build && cp public/* ./ && git add . && git commit -m 'Publish latest version'",
-    "postpublish": "git push origin gh-pages && git checkout master"
+    "postpublish": "git push -f origin gh-pages && git checkout master"
   },
   "repository": {
     "type": "git",
