Updated packages and fixed errors to ensure project runs smoothly
I was trying to run this project to update with some new information but I found a lot of errors and packages not updated, so I decided to update the packages and fix the erros to be able to run the project again.

I made some tests and the project is running with all the updates without any error.

I'll do another PR to add the information that I was talking about before.

--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
   "description": "Darkest Dungeon curios and provisions companion",
   "main": "index.js",
   "dependencies": {
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-radio-group": "^2.2.0",
-    "react-redux": "^4.4.0",
-    "redux": "^3.3.1",
-    "redux-persist": "^1.5.6",
-    "redux-thunk": "^1.0.3",
-    "reselect": "^2.0.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-radio-group": "^3.0.3",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.8"
   },
   "devDependencies": {
-    "babel-core": "^6.5.2",
-    "babel-loader": "^6.2.3",
-    "babel-plugin-transform-object-rest-spread": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "react-hot-loader": "^1.3.0",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "react-hot-loader": "^4.13.1",
     "redux-devtools": "^3.1.1",
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.4",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
-  },
+    "webpack": "^5.82.1",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
+  },  
   "scripts": {
-    "build": "NODE_ENV=production webpack --progress --profile --colors",
-    "dev": "webpack-dev-server --progress --profile --colors --hot",
+    "build": "SET NODE_ENV=production && webpack --progress --profile",
+    "dev": "webpack-dev-server --progress --profile --hot",
     "prepublish": "git branch -D gh-pages && git checkout -b gh-pages",
     "publish": "npm run build && cp -r public/* ./ && git add . && git commit -m 'Publish github pages'",
     "postpublish": "git push -f origin gh-pages && git checkout master"
