--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 
 {
-  "presets": ["es2015", "react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": ["transform-object-rest-spread"]
 }
